# foml-project

./: .gitignore  README.md  pyproject.toml
data/: coco_download.sh
notebooks/: ada_boost.py  alex_net.py  classifier_tests.py  dataset_samples.py  dataset_tests.py  demo.py  sync.sh  to_ipynb.sh  weak_learners_squeeze_net_draft.py
notebooks/dataset_tests/: coco_api_tests.py  ydshieh_coco_dataset_script.py
src/classifiers/: alex_net.py  base.py  base_learner.py  gmm.py  mean_shift.py  ncut.py  simple_learner.py  strong_learner.py  weak_learner.py
src/datasets/: custom_coco_dataset.py  ensemble_set.py
src/ensamble_training/: ada_boost.py
src/ensemble_training/: ada_boost.py
src/layers/: fire_layer.py
src/loss_functions/: base_weighted_loss.py  weighted_cross_entropy.py  weighted_distance.py
src/pipeline/: model_builder.py
src/pipeline/analysis/aggregate/: a3_aggregate_analyzer.py  a3_aggregate_analyzer_fix.py  aggregate_analyzer.py
src/pipeline/analysis/datasets/: dataset_analyzer.py
src/pipeline/analysis/models/: gmm_evaluator.py  mean_shift_evaluator.py  (+1 more)
src/pipeline/dataset_providers/: base.py  mnist_digits_provider.py
src/pipeline/feature_engineering/: base.py  pca_engineering.py
src/pipeline_TODO/: README.md  core.py
src/pipeline_TODO/classifiers/: base.py
src/utils/: constants.py  data_manager.py  feat_engineering.py  serialization.py  tensor_utility.py  tensor_utils.py  time_utils.py  training.py  type_utility.py
src/utils/models_utils/: adaboost_loss.py
src/visualization/: base.py  exploration.py  feature_engineering.py  foml_report.py  mnist.py  unsupervised_learning.py
(+9 files in other folders)
