[tool.poetry]
name = "foml-project"
version = "0.1.0"
description = ""
authors = ["zACIID <marchioropierluigi@gmail.com>", "skippa1da2flippa <881423@stud.unive.it>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
jupyter = "^1.0.0"
scikit-learn = "^1.3.0"
jupytext = "^1.15.1"
seaborn = "^0.13"
loguru = "^0.7.1"
plotly = "^5.16.1"
kaleido = "0.2.1"
datasets = "^2.14.6"
pycocotools = "^2.0.7"
scikit-image = "^0.22.0"
tqdm = "^4.66.1"
torch = {version = "^2.1.2+cu118", source = "pytorch_cu118"}
torchvision = {version = "^0.16.2+cu118", source = "pytorch_cu118"}
opencv-python = "^4.9.0.80"


[[tool.poetry.source]]
name = "pytorch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
